# nveil

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mailmap  CLA.md  COMMERCIAL-LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.yaml  mkdocs.yml
.github/: SECURITY.md  build-images.sh
.github/workflows/: build-images.yml  cla.yml
connectors/: pyproject.toml
connectors/src/connectors/: __init__.py  registry.py
connectors/src/connectors/physicell/: __init__.py  converter.py  xml_parser.py
docker/ai/: dockerfile  entrypoint.sh  requirements.txt
docker/base/: dockerfile
docker/file/: dockerfile  entrypoint.sh  requirements.txt
docker/postgres/: init-ai-db.sh
docker/server/: dockerfile  entrypoint.sh  requirements.txt
docker/setup/: Dockerfile  app.py  compose_utils.py  requirements.txt  tui.py
docker/visualization/: dockerfile  entrypoint.sh  requirements.txt
docs/: from-code.md  index.md  mkdocs.yml
docs/pages/: index.md  self-hosting.md
docs/pages/assets/: extra.css
examples/: README.md
examples/Miscellaneous/AirbnbGuest/: chat.json  choregraph.xml  choregraph_20260109_150048.xml  choregraph_20260109_150128.xml  (+12 more)
licensing/: COMMERCIAL-LICENSE.md
nveil/: utf-8-format.sh
nveil/backend/: conftest.py  mkdocs.yml  pyproject.toml
nveil/backend/tools/: README.md  pyproject.toml
nveil/backend/tools/logger/: __init__.py  logger.py  logging_config.yaml
nveil/frontend/: .gitignore  Makefile  eslint.config.js  index.html  package-lock.json  package.json  prerender.js  rebuild.sh  vite.config.js  vitest.config.js
(+516 files in other folders)
