[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logger"
version = "0.1.0"
description = "Logger pour l'application Nveil"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Nveil", email = "nveil@nveil.com" }
]

license = { text = "AGPL-3.0-or-later" }

dependencies = [
]
